--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,23 +20,9 @@
   </ion-header>
 
     <ion-list lines="full">
-      <ion-item-sliding *ngFor="let task of getFilteredTask()">
-        <ion-item-options side="start">
-          <ion-item-option color="danger">
-            <ion-icon slot="icon-only" name='trash' (click)="deleteTask(task.id)"></ion-icon>
-          </ion-item-option>
-        </ion-item-options>
-
-          <ion-item>
-          <ion-label>
-            {{task.name}}
-          </ion-label>
-          <ion-icon *ngIf='task.done' name='checkmark-circle' color="success"
-                    (click)="toggleTaskStatus(task.id)"></ion-icon>
-          <ion-icon *ngIf='!task.done' name='checkmark'
-                    (click)="toggleTaskStatus(task.id)"></ion-icon>
-        </ion-item>
-      </ion-item-sliding>
+      <app-task-item
+        *ngFor="let t of taskService.getFilteredTask(selectedFilter)" [task]="t">
+      </app-task-item>
     </ion-list>
 
   <ion-fab *ngIf="fabIsVisible" [vertical]="verticalFabPosition" horizontal='end' slot='fixed'>
