--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu #menu side="start" menuId="menu" contentId="main">
+    <ion-header>
+      <ion-toolbar color="primary">
+        <ion-title>ToDo</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list lines="full" (click)='menu.close()'>
+        <ion-item [routerLink]="['home']">Tasks</ion-item>
+        <ion-item [routerLink]="['labels']">Labels</ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
